# GuiaTCC

./: Application.hs  Biblioteca.hs  Foundation.hs  GuiaTCC.cabal  Home.hs  Index.hs  Main.hs  Pdf.hs  Portal.hs  Sobre.hs  client_session_key.aes  routes
Handler/: Curso.hs  TCC.hs  TipoUser.hs  Usuario.hs
Handlers/: Curso.hs  TCC.hs  TipoUser.hs  Usuario.hs
static/css/: custom.css
static/img/: background.ai  guia-tcc-2.ai  guia-tcc.ai
