name:               GuiaTCC
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          GuiaTCC
  main-is:          Main.hs
  other-modules:    Application
                    Foundation
                    Index
                    Biblioteca
                    Portal
                    Sobre
                    Handler.Curso
                    Handler.Usuario
                    Handler.TCC
                    Handler.TipoUser

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod-core
                , yesod
                , yesod-static
                , text                          
                , persistent                    
                , persistent-postgresql
                , monad-logger

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
